# Win32-odbc-sqlinstaller

./: LICENSE  Win32-odbc-sqlinstaller.cabal
config-dsn/: Main.hs
src/System/Win32/ODBC/: SQLInstaller.hs
src/System/Win32/ODBC/SQLInstaller/: Attributes.hs  Internal.hsc
src/System/Win32/ODBC/SQLInstaller/Attributes/: Common.hs  Postgres.hs
