name:                Win32-odbc-sqlinstaller
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nicholas Mojarovskiy
maintainer:          nickmojarovskiy@gmail.com
copyright:           Nicholas Mojarovskiy, 2015
category:            System
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:
    System.Win32.ODBC.SQLInstaller
    System.Win32.ODBC.SQLInstaller.Attributes
    System.Win32.ODBC.SQLInstaller.Attributes.Common
    System.Win32.ODBC.SQLInstaller.Attributes.Postgres
  other-modules:
    System.Win32.ODBC.SQLInstaller.Internal
  extra-libraries:     odbccp32
  build-depends:
      base >= 4.7 && < 5
    , Win32 >= 2

executable config-dsn
  hs-source-dirs: config-dsn
  main-is:        Main.hs
  other-modules:
  build-depends:
      base
    , optparse-applicative
    , Win32
    , Win32-odbc-sqlinstaller
